import { DataTypes } from "sequelize";
import { sequelize } from "../config/database.js";

const User = sequelize.define(
  "User",
  {
    id: { type: DataTypes.INTEGER, autoIncrement: true, primaryKey: true },

    username: { type: DataTypes.STRING, allowNull: false },

    email: { type: DataTypes.STRING, allowNull: false, unique: true },

    password: { type: DataTypes.STRING, allowNull: false },

    role: {
      type: DataTypes.ENUM("customer", "seller", "admin"),
      allowNull: false,
      defaultValue: "customer",
    },

    storeName: { type: DataTypes.STRING, allowNull: true },
    storeAddress: { type: DataTypes.STRING, allowNull: true },
    storePhone: { type: DataTypes.STRING, allowNull: true },
  },
  {
    tableName: "users",
    timestamps: true,
  }
);

export default User;
